Add `LICENSE` file, mention license in `package.json`, list authors

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "type": "git",
     "url": "git://github.com/clkao/ep_author_neat.git"
   },
+  "license": "MIT",
   "engines": {
     "node": "*"
   },
