Delete unnecessary `package.json` metadata

--- a/package.json
+++ b/package.json
@@ -19,11 +19,5 @@
     "type": "git",
     "url": "git://github.com/clkao/ep_author_neat.git"
   },
-  "license": "MIT",
-  "engines": {
-    "node": "*"
-  },
-  "dependencies": {},
-  "devDependencies": {},
-  "optionalDependencies": {}
+  "license": "MIT"
 }
